<resources>
    <string name="app_name">Login</string>
    <string name="input_account">输入账号</string>
    <string name="input_password">密码</string>
    <string name="login">登 录</string>
    <string name="text_qq">QQ</string>
    <string name="login_message">阅读并同意</string>
    <string name="login_terms_of_service">服务条款</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="edit_text_dialog_hint">Type message here</string>
    <string name="button_send_dialog">Send</string>
    <string name="button_reply_dialog">reply</string>
    <string name="dialog_activity">聊天界面</string>
    <string name="user_center">用户中心</string>
    <string name="change_terms">Change terms</string>
    <string name="stop_service">stop service</string>
    <string name="channel_name">channel_name_1</string>
    <string name="channel_description">channel_description_1</string>
    <string name="start_forground_service">start forground service</string>
    <string name="start_intent_service">start intent service</string>
    <string name="load_progress">Load Progress</string>
    <string name="not_load_yet">It\'s not load yet</string>
    <string name="cancel">cancel</string>
    <string name="downloading">Downloading...</string>
    <string name="download_finished">Download Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="download_async_task">download async task</string>

</resources>
