<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DialogActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_dialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_text_dialog_hint"
            android:maxLines="2" />

        <Button
            android:id="@+id/button_send_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send_dialog"/>

        <Button
            android:id="@+id/button_reply_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reply_dialog"/>

    </LinearLayout>


</LinearLayout>